--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "fs-extra": "^9.1.0",
     "gulp": "^4.0.2",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-git": "^2.10.1",
     "gulp-less": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "json-stringify-pretty-compact": "^3.0.0",
+    "node-sass": "^5.0.0",
     "sass": "^1.32.8",
     "typescript": "^4.2.3",
     "yargs": "^16.2.0"
