--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "sass": "^1.32.8",
     "typescript": "^4.2.3",
     "yargs": "^16.2.0"
+  },
+  "dependencies": {
+    "prettier": "^2.3.0"
   }
 }
