--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
-	"compilerOptions": {
-		"target": "ES2017",
-		"lib": [
-			"DOM",
-			"ES6",
-			"ES2017"
-		],
-		"types": ["foundry-pc-types"]
-	}
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["DOM", "ES6", "ES2020"],
+    "types": ["@league-of-foundry-developers/foundry-vtt-types"],
+    "moduleResolution": "node",
+    "resolveJsonModule": true
+  }
 }
