--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "package": "gulp package",
     "build": "gulp build && gulp link",
     "build:watch": "gulp watch",
-    "clean": "gulp clean && gulp link --clean"
+    "clean": "gulp clean && gulp link --clean",
+    "test": "jest"
+  },
+  "engines": {
+    "node": ">14.0.0"
   },
   "author": "",
   "license": "",
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
+    "@types/jest": "^26.0.23",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
     "fs-extra": "^9.1.0",
@@ -21,8 +26,10 @@
     "gulp-less": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "jest": "^26.6.3",
     "json-stringify-pretty-compact": "^3.0.0",
     "sass": "^1.32.8",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.3",
     "yargs": "^16.2.0"
   },
