--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["DOM", "ES6", "ES2020"],
-    "types": ["@league-of-foundry-developers/foundry-vtt-types"],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["@league-of-foundry-developers/foundry-vtt-types", "@types/jest"],
     "moduleResolution": "node",
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "esModuleInterop": true
+  },
+  "exclude": ["./**/.*.test.*", "./**/__mocks__"]
 }
