--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "archiver": "^5.3.0",
     "chalk": "^4.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-prettier": "^3.4.0",
     "fs-extra": "^9.1.0",
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.0.2",
