--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "gulp build && gulp link",
     "build:watch": "gulp watch",
     "clean": "gulp clean && gulp link --clean",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "engines": {
     "node": ">14.0.0"
@@ -41,7 +43,8 @@
     "sass": "^1.32.8",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.3",
-    "yargs": "^16.2.0"
+    "yargs": "^16.2.0",
+    "husky": "^6.0.0"
   },
   "dependencies": {
     "jquery": "^3.6.0",
