--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "yargs": "^16.2.0"
   },
   "dependencies": {
+    "@types/faker": "^5.5.6",
+    "faker": "^5.5.3",
     "jquery": "^3.6.0",
     "prettier": "^2.3.0"
   },
