--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lint-staged": "^11.0.0",
     "node-sass": "^5.0.0",
     "sass": "^1.32.8",
+    "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.3",
     "yargs": "^16.2.0"
@@ -52,5 +53,6 @@
   },
   "lint-staged": {
     "*.ts": "eslint --cache"
-  }
+  },
+  "sasslintConfig": "./.sass-lint.yml"
 }
