--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "@typescript-eslint/explicit-module-boundary-types": ["off"],
     "import/prefer-default-export": ["off"],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"]
+    "@typescript-eslint/no-shadow": ["error"],
+    "arrow-body-style": "off"
   },
   "ignorePatterns": ["**/*.d.ts"]
 }
