changes: make build path configurable

--- a/foundryconfig.example.json
+++ b/foundryconfig.example.json
@@ -1,4 +1,5 @@
 {
+  "destPath": "",
   "dataPath": "",
   "repository": "https://github.com/Guote/AnimaBeyondFoundry",
   "rawURL": "https://raw.githubusercontent.com/Guote/AnimaBeyondFoundry/develop/src/system.json?token=ABZDWT3PAZGSJMXL7HJY3P3AZWZBI"
