changes: add elan and elan powers

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,14 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "no-console": [
+      "error",
+      {
+        "allow": ["warn", "error"]
+      }
+    ],
+    "no-continue": "off",
+    "no-await-in-loop": "off",
     "no-restricted-syntax": "off",
     "@typescript-eslint/comma-dangle": ["off"],
     "import/no-cycle": ["off"],
