changes: review deploy pipeline

--- a/foundryconfig.example.json
+++ b/foundryconfig.example.json
@@ -1,5 +1,5 @@
 {
   "destPath": "",
-  "repository": "https://github.com/Guote/AnimaBeyondFoundry",
-  "rawURL": "https://raw.githubusercontent.com/Guote/AnimaBeyondFoundry/develop/src/system.json?token=ABZDWT3PAZGSJMXL7HJY3P3AZWZBI"
+  "repository": "https://github.com/AnimaBeyondDevelop/AnimaBeyondFoundry",
+  "rawURL": "https://raw.githubusercontent.com/AnimaBeyondDevelop/AnimaBeyondFoundry"
 }
