--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "private": true,
   "name": "anima-beyond-foundry",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "",
   "scripts": {
     "package": "gulp package",
     "build": "gulp build",
     "build:watch": "gulp watch",
+    "build:publish": "gulp publish --release",
     "test": "jest src",
     "postinstall": "npx husky set .husky/pre-commit \"npm run hook:pre-commit\"",
     "hook:pre-commit": "npm run test && lint-staged",
@@ -44,6 +45,7 @@
     "json-stringify-pretty-compact": "^3.0.0",
     "lint-staged": "^11.0.0",
     "node-sass": "^5.0.0",
+    "readline-sync": "^1.4.10",
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
