--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "package": "gulp package",
     "build": "gulp build",
     "build:watch": "gulp watch",
-    "build:publish": "gulp publish --release",
+    "clean": "gulp clean",
+    "publish": "gulp publish --release",
     "test": "jest src",
     "postinstall": "npx husky set .husky/pre-commit \"npm run hook:pre-commit\"",
     "hook:pre-commit": "npm run test && lint-staged",
@@ -20,6 +21,7 @@
   "license": "",
   "devDependencies": {
     "@league-of-foundry-developers/foundry-vtt-types": "^0.8.8-9",
+    "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.23.3",
     "eslint-plugin-prettier": "^3.4.0",
+    "faker": "^5.5.3",
     "fs-extra": "^9.1.0",
     "gulp": "^4.0.2",
     "gulp-dart-sass": "^1.0.2",
@@ -45,7 +48,9 @@
     "json-stringify-pretty-compact": "^3.0.0",
     "lint-staged": "^11.0.0",
     "node-sass": "^5.0.0",
+    "prettier": "^2.3.0",
     "readline-sync": "^1.4.10",
+    "rimraf": "^3.0.2",
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
@@ -53,10 +58,7 @@
     "yargs": "^16.2.0"
   },
   "dependencies": {
-    "@types/faker": "^5.5.6",
-    "faker": "^5.5.3",
-    "jquery": "^3.6.0",
-    "prettier": "^2.3.0"
+    "jquery": "^3.6.0"
   },
   "lint-staged": {
     "src/**/*.ts": "eslint --fix --cache",
