--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "@typescript-eslint/ban-types": "off",
     "class-methods-use-this": "off",
     "@typescript-eslint/indent": "off",
     "max-len": ["warn", { "code": 120 }],
