--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.12.1",
   "description": "Unofficial Anima Beyond Fantasy system for Foundry VTT",
   "scripts": {
-    "build": "gulp build",
-    "build:watch": "gulp watch",
+    "build": "gulp build --develop",
+    "build:watch": "gulp watch --develop",
     "clean": "gulp clean",
     "package": "gulp package --release",
     "publish": "gulp publish --release",
