Extract distribution config to separate file

--- a/foundryconfig.example.json
+++ b/foundryconfig.example.json
@@ -1,5 +1,3 @@
 {
-  "destPath": "",
-  "repository": "https://github.com/AnimaBeyondDevelop/AnimaBeyondFoundry",
-  "rawURL": "https://raw.githubusercontent.com/AnimaBeyondDevelop/AnimaBeyondFoundry"
+  "destPath": ""
 }
