--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^9.268.0",
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-2",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -50,8 +54,14 @@
     "prettier": "^2.3.0",
     "readline-sync": "^1.4.10",
     "rimraf": "^3.0.2",
+    "rollup": "^2.70.2",
+    "rollup-plugin-copy-watch": "^0.0.1",
+    "rollup-plugin-svelte": "^7.1.0",
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-preprocess": "^4.10.6",
     "ts-jest": "^26.5.6",
     "typescript": "^4.6.3",
     "yargs": "^16.2.0"
