--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "",
   "devDependencies": {
-    "@league-of-foundry-developers/foundry-vtt-types": "^0.8.9-2",
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.268.0",
     "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -53,7 +53,7 @@
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
-    "typescript": "^4.4.2",
+    "typescript": "^4.6.3",
     "yargs": "^16.2.0"
   },
   "dependencies": {
