--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "types": [
       "@league-of-foundry-developers/foundry-vtt-types",
-      "@types/jest"
+      "@types/jest",
+      "svelte"
     ],
     "moduleResolution": "node",
     "resolveJsonModule": true,
