changes(gulp): add new system

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,5 +38,14 @@
     "@typescript-eslint/no-shadow": ["error"],
     "arrow-body-style": "off"
   },
-  "ignorePatterns": ["**/*.d.ts"]
+  "ignorePatterns": ["**/*.d.ts"],
+  "overrides": [
+    {
+      "files": "vite.config.ts",
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off",
+        "import/no-extraneous-dependencies": "off"
+      }
+    }
+  ]
 }
