--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "copy:prod-system": "cp src/system.json dist/system.json",
     "copy:files": "cp src/template.json dist && cp -r src/lang dist && cp -r src/templates dist && cp -r src/assets dist && cp -r src/packs dist",
     "clean": "rimraf dist/",
-    "package": "gulp package --release",
-    "publish": "gulp publish --release",
+    "release": "node scripts/release.js",
+    "release:dry": "node scripts/release.js --dry",
     "test": "jest src",
     "hook:pre-commit": "lint-staged",
     "cypress:open": "cd integration && cypress open"
@@ -46,17 +46,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "faker": "^5.5.3",
     "fs-extra": "^9.1.0",
-    "gulp": "^4.0.2",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-git": "^2.10.1",
-    "gulp-less": "^4.0.1",
-    "gulp-sass": "^4.1.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
-    "json-stringify-pretty-compact": "^3.0.0",
     "lint-staged": "^11.0.0",
-    "node-sass": "^5.0.0",
     "prettier": "^2.3.0",
     "readline-sync": "^1.4.10",
     "rimraf": "^3.0.2",
@@ -64,8 +56,6 @@
     "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "vite-plugin-static-copy": "^0.13.1",
     "yargs": "^16.2.0"
   },
   "dependencies": {
