--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "description": "Unofficial Anima Beyond Fantasy system for Foundry VTT",
   "scripts": {
     "dev": "nodemon",
-    "build": "npm run build:com && npm run copy:files && npm run copy:prod-system",
-    "build:dev:watch": "nodemon --exec \"npm run build:dev\"",
-    "build:prod": "npm run build && node scripts/appendSystemName.js animabf && node scripts/copyDirectoryToFoundrySystem.js animabf",
-    "build:com": "rimraf dist/ && npm run build:ts && npm run build:sass",
+    "build:dev": "npm run build:com && npm run copy:files && node scripts/copyDirectoryToFoundrySystem.js animabf",
+    "build:prod": "npm run build:com && npm run copy:files",
+    "build:com": "rimraf dist/ && npm run build:ts && npm run build:sass && npm run build:template",
     "build:ts": "tsc-esm -p .",
     "build:sass": "sass src/scss/animabf.scss dist/animabf.css",
-    "copy:prod-system": "cp src/system.json dist/system.json",
-    "copy:files": "cp src/template.json dist && cp -r src/lang dist && cp -r src/templates dist && cp -r src/assets dist && cp -r src/packs dist",
+    "build:template": "node ./scripts/buildTemplate.js",
+    "copy:files": "cp src/template.json dist && cp -r src/lang dist && cp -r src/templates dist && cp -r src/assets dist && cp -r src/packs dist && cp src/system.json dist",
     "clean": "rimraf dist/",
     "release": "node scripts/release/release.js",
     "release:dry": "node scripts/release/release.js --dry",
