--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,7 @@
     "esModuleInterop": true,
     "allowJs": true,
     "checkJs": true,
+    "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
     "outDir": "dist"
