build: removes the buildTemplate.js call from scripts since it was deleted in #166

--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "dev": "nodemon",
     "build:dev": "npm run build:com && npm run copy:files && node scripts/copyDirectoryToFoundrySystem.js animabf",
     "build:prod": "npm run build:com && npm run copy:files",
-    "build:com": "rimraf dist/ && npm run build:ts && npm run build:sass && npm run build:template",
+    "build:com": "rimraf dist/ && npm run build:ts && npm run build:sass",
     "build:ts": "tsc-esm -p .",
     "build:sass": "sass src/scss/animabf.scss dist/animabf.css",
-    "build:template": "node ./scripts/buildTemplate.js",
     "copy:files": "cp src/template.json dist && cp -r src/lang dist && cp -r src/templates dist && cp -r src/assets dist && cp -r src/packs dist && cp src/system.json dist",
     "clean": "rimraf dist/",
     "release": "node scripts/release/release.js",
