--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
+    "checkJs": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
     "outDir": "dist"
