WIP: spells tab with svelte
Error: updating fields from the spells is not permanent
Error: contextual menue not working

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,8 +7,20 @@
       "esnext"
     ],
     "types": [
+      "svelte",
       "@types/jest"
     ],
+    "paths": {
+      "@svelte/*": [
+        "./src/svelte/*"
+      ],
+      "@module/*": [
+        "./src/module/*"
+      ],
+      "@assets/*": [
+        "./src/assets/*"
+      ]
+    },
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
