--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
     "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@tinymce/tinymce-svelte": "^2.0.1",
     "@types/faker": "^5.5.6",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.23",
