--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "types": [
-      "@types/jest"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["@types/jest"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
@@ -17,12 +11,6 @@
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "./**/.*.test.*",
-    "./**/__mocks__",
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["./**/.*.test.*", "./**/__mocks__", "node_modules"]
 }
