--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,25 +1,12 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "types": [
-      "svelte",
-      "@types/jest"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["svelte", "@types/jest"],
     "paths": {
-      "@svelte/*": [
-        "./src/svelte/*"
-      ],
-      "@module/*": [
-        "./src/module/*"
-      ],
-      "@assets/*": [
-        "./src/assets/*"
-      ]
+      "@svelte/*": ["./src/svelte/*"],
+      "@module/*": ["./src/module/*"],
+      "@assets/*": ["./src/assets/*"]
     },
     "moduleResolution": "node",
     "resolveJsonModule": true,
@@ -31,12 +18,6 @@
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "./**/.*.test.*",
-    "./**/__mocks__",
-    "node_modules"
-  ]
+  "include": ["src"],
+  "exclude": ["./**/.*.test.*", "./**/__mocks__", "node_modules"]
 }
