--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
-    "svelte": "^5.0.0-next.1",
+    "svelte": "^4.2.2",
     "ts-jest": "^26.5.6",
-    "typescript": "^5.0.0",
+    "typescript": "^4.9.5",
     "vite": "^4.5.0",
     "yargs": "^16.2.0"
   },
