--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "",
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "@tinymce/tinymce-svelte": "^2.0.1",
     "@types/faker": "^5.5.6",
     "@types/handlebars": "^4.1.0",
@@ -52,7 +52,7 @@
     "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
-    "svelte": "^4.2.2",
+    "svelte": "^5.0.0-next.111",
     "ts-jest": "^26.5.6",
     "typescript": "^4.9.5",
     "vite": "^4.5.0",
