--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "license": "",
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
+    "@foundryvtt/foundryvtt-cli": "^1.0.3",
     "@types/faker": "^5.5.6",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.23",
     "@types/jquery": "^3.5.16",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
@@ -53,8 +55,7 @@
     "sass-lint": "^1.13.1",
     "ts-jest": "^26.5.6",
     "typescript": "^4.9.5",
-    "yargs": "^16.2.0",
-    "@types/handlebars": "^4.1.0"
+    "yargs": "^16.2.0"
   },
   "dependencies": {
     "jquery": "^3.6.0"
