--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "license": "",
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
+    "@foundryvtt/foundryvtt-cli": "^1.0.3",
     "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "@tinymce/tinymce-svelte": "^2.0.1",
-    "@foundryvtt/foundryvtt-cli": "^1.0.3",
     "@types/faker": "^5.5.6",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.23",
@@ -62,7 +62,8 @@
     "yargs": "^16.2.0"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "lint-staged": {
     "src/**/*.ts": "eslint --fix --cache",
