--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rimraf dist/",
     "release": "node scripts/release/release.js",
     "release:dry": "node scripts/release/release.js --dry",
-    "test": "jest src",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src",
     "hook:pre-commit": "lint-staged",
     "cypress:open": "cd integration && cypress open",
     "compendia:pack": "node scripts/compendia/packCompendia.mjs",
