--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["svelte", "@types/jest"],
+    "types": ["svelte", "@types/jest", "@league-of-foundry-developers/foundry-vtt-types"],
     "paths": {
       "@svelte/*": ["./src/svelte/*"],
       "@module/*": ["./src/module/*"],
       "@assets/*": ["./src/assets/*"]
     },
-    "moduleResolution": "node",
+    "module": "ES2022",
+    "moduleResolution": "node", // This might conflict with foundry-vtt-types
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
