--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   "license": "",
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
+    "@foundryvtt/foundryvtt-cli": "^1.0.3",
+    "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#v12/main",
     "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "@tinymce/tinymce-svelte": "^2.0.1",
-    "@foundryvtt/foundryvtt-cli": "^1.0.3",
     "@types/faker": "^5.5.6",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^26.0.23",
@@ -56,8 +57,7 @@
     "sass": "^1.32.8",
     "sass-lint": "^1.13.1",
     "svelte": "^5.0.0-next.225",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.2",
     "vite": "^4.5.0",
     "yargs": "^16.2.0"
   },
