Re-enable checkJs in jsconfig.json and keep svelte-check out of the build process
Apparently some important errors on svelte only appear in svelte-check
if it is checking the types for the components. For that reason, we keep
svelte-check out of the build process until we fix the types (otherwise
it fails)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
-    // "checkJs": true,
+    "checkJs": true,
     "strict": true,
     "strictNullChecks": true,
     "skipLibCheck": true,
