--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
     "lib": ["dom", "dom.iterable", "esnext"],
     "types": ["svelte", "@types/jest", "@league-of-foundry-developers/foundry-vtt-types"],
     "paths": {
       "@svelte/*": ["./src/svelte/*"],
       "@module/*": ["./src/module/*"],
+      "@utils/*": ["./src/utils/*"],
       "@assets/*": ["./src/assets/*"]
     },
     "module": "ES2022",
@@ -12,9 +14,10 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
-    // "checkJs": true,
+    "checkJs": true,
     "strict": true,
     "strictNullChecks": true,
+    "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "outDir": "dist"
   },
