--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "anima-beyond-foundry",
-  "version": "1.19.2",
+  "version": "1.9.3",
   "description": "Unofficial Anima Beyond Fantasy system for Foundry VTT",
   "type": "module",
   "scripts": {
@@ -10,8 +10,8 @@
     "build:prod": "npm run compendia:pack && npx vite build",
     "svelte-check": "npx svelte-check --no-tsconfig --threshold error",
     "clean": "rimraf dist/",
-    "release": "node scripts/release/release.js",
-    "release:dry": "node scripts/release/release.js --dry",
+    "release": "node scripts/release/release.cjs",
+    "release:dry": "node scripts/release/release.cjs --dry",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src",
     "hook:pre-commit": "lint-staged",
     "cypress:open": "cd integration && cypress open",
