--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@svelte/*": ["./src/svelte/*"],
       "@module/*": ["./src/module/*"],
       "@utils/*": ["./src/utils/*"],
+      "@scss/*": ["./src/scss/*"],
       "@assets/*": ["./src/assets/*"]
     },
     "module": "ES2022",
