--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@digitak/tsc-esm": "^3.1.4",
     "@foundryvtt/foundryvtt-cli": "^1.0.3",
-    "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#v12/main",
+    "@league-of-foundry-developers/foundry-vtt-types": "^12.331.3-beta",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.7",
     "@tinymce/tinymce-svelte": "^2.0.1",
     "@types/faker": "^5.5.6",
