--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "types": ["svelte", "@types/jest", "@league-of-foundry-developers/foundry-vtt-types"],
+    "types": ["@types/jest", "@league-of-foundry-developers/foundry-vtt-types"],
     "paths": {
-      "@svelte/*": ["./src/svelte/*"],
       "@module/*": ["./src/module/*"],
       "@assets/*": ["./src/assets/*"]
     },
